syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.motorro.datastore.data";

message MyPreferencesProto {
    string userName = 1;
    string password = 2;
    optional uint64 dob = 3;
    bool displayDob = 4;
}
